--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Sphinx Docs
 
 on:
   push:
@@ -31,5 +31,10 @@ jobs:
     - name: Build html
       run: |
         cd ./docs-out
-        make clean
         make html
+        rm -r ../docs/*
+        cp -r build/html ../docs
+        
+        
+        
+        
