--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         cd ./docs-out
         make html
         rm -r ../docs/*
-        cp -r build/html ../docs
+        cp -r _build/html ../docs
         
         
         
