--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         make clean
         make html
         rm -rf ../docs/*
-        cp  _build/html/* ../docs/
+        cp -r _build/html/* ../docs/
         cd ..
         git config --local user.email "f.martini@campus.unimib.it"
         git config --local user.name "philipMartini"
