--- a/.github/workflows/python-PyCTBN-package.yml
+++ b/.github/workflows/python-PyCTBN-package.yml
@@ -5,6 +5,9 @@ name: Python package
 
 on:
   push:
+    paths-ignore: 
+      -'docs/**'
+      -'docs-out/**'
     branches: [ master ]
   pull_request:
     branches: [ master ]
