--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-vendored=false
-*.html linguist-vendored=false
-*.css linguist-vendored=false
+*.js linguist-vendored
+*.html linguist-vendored
+*.css linguist-vendored
