--- a/.github/workflows/python-PyCTBN-package.yml
+++ b/.github/workflows/python-PyCTBN-package.yml
@@ -62,6 +62,7 @@ jobs:
         git commit -m "Create New Realease at dist/" -a || true
         # The above command will fail if no changes were present, so we ignore
         # that.
+        git pull origin
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
