--- a/.github/workflows/python-PyCTBN-package.yml
+++ b/.github/workflows/python-PyCTBN-package.yml
@@ -43,13 +43,13 @@ jobs:
       run: |
         pytest PyCTBN/tests/
     - name: Install pypa/build
-      run: >-
+      run: |
         python -m
         pip install
         build
         --user
     - name: Build a binary wheel and a source tarball
-      run: >-
+      run: |
         git clone https://github.com/philipMartini/PyCTBN --branch master  --single-branch
         python -m
         build
