--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,10 @@
 name: Sphinx Docs
 
 on:
-  push:
-    paths-ignore: 
-      -'docs/**'
-      -'docs-out/**'
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  workflow_run:
+    workflows: ["Python package"]
+    types:
+      - completed
 
 jobs:
   build:
