--- a/.github/workflows/python-PyCTBN-package.yml
+++ b/.github/workflows/python-PyCTBN-package.yml
@@ -11,6 +11,8 @@ on:
       -'dist/**'
       -'build/**'
     branches: [ master ]
+    tags-ignore:
+      - 'v*'
   pull_request:
     branches: [ master ]
 
