--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -41,6 +41,6 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.PYCTBN_TOK }}
         with:
             upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-            asset_path: ./dist/Py
+            asset_path: ./dist/PyCTBN-1.0.tar.gz
             asset_name: PyCTBN-1.0.tar.gz
             asset_content_type: application/tar+gzip
