--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -30,8 +30,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PYCTBN_TOK }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: v.${{ github.ref }}
+          release_name: Release v ${{ github.ref }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
