--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -1,4 +1,5 @@
-on:
+      
+      on:
   push:
     # Sequence of patterns matched against refs/tags
     #tags:
@@ -31,16 +32,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PYCTBN_TOK }}
         with:
           tag_name: v.${{ github.ref }}
-          release_name: Release v ${{ github.ref }}
+          release_name: Release v- ${{ github.ref }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
         id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-            GITHUB_TOKEN: ${{ secrets.PYCTBN_TOK }}
+        uses: AButler/upload-release-assets@v2.0
         with:
-            upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-            asset_path: ./dist/PyCTBN-1.0.tar.gz
-            asset_name: PyCTBN-1.0.tar.gz
-            asset_content_type: application/tar+gzip
+          files: 'dist/*;'
+          repo-token: ${{ secrets.PYCTBN_TOK }}
+
