--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -32,7 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PYCTBN_TOK }}
         with:
           tag_name: v.${{ github.ref }}
-          release_name: Release v- ${{ github.ref }}
+          release_name: Release v. ${{ github.ref }}
           draft: false
           prerelease: false
       - name: Upload Release Asset
