--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -37,8 +37,9 @@ jobs:
           prerelease: false
       - name: Upload Release Asset
         id: upload-release-asset 
-        uses: AButler/upload-release-assets@v2.0
+        uses: dwenegar/upload-release-assets@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PYCTBN_TOK }}
         with:
-          files: 'dist/*;'
-          repo-token: ${{ secrets.PYCTBN_TOK }}
-
+          release_id: ${{ steps.create_release.outputs.id }}
+          assets_path: ./dist
