--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -12,7 +12,7 @@ jobs:
     name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
-<     - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
