--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -31,11 +31,13 @@ jobs:
       - name: Test with pytest
         run: |
             pytest PyCTBN/tests/>
+      - name: Checkout code
+            uses: actions/checkout@v2
       - name: Install dependencies
         run: |
-                python -m pip install --upgrade pip
-                python -m pip install flake8 pytest
-                if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            python -m pip install --upgrade pip
+            python -m pip install flake8 pytest
+            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Install pypa/build
         run: |
             python -m pip install build
