--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -9,6 +9,12 @@ name: Upload Release Asset
 
 jobs:
   build:
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8]
+
     name: Upload Release Asset
     runs-on: ubuntu-latest
     steps:
