--- a/.github/workflows/Build_Release.yml
+++ b/.github/workflows/Build_Release.yml
@@ -35,7 +35,7 @@ jobs:
             flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-            pytest PyCTBN/tests/>
+            pytest PyCTBN/tests/
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
