--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: Sphinx Docs
 
 on:
   workflow_run:
-    workflows: ["Python package"]
+    workflows: ["Python package","Upload Release Asset"]
     types:
       - completed
 
