--- a/.github/workflows/python-PyCTBN-package.yml
+++ b/.github/workflows/python-PyCTBN-package.yml
@@ -5,11 +5,8 @@ name: Python package
 
 on:
   push:
-    paths-ignore: 
-      -'docs/**'
-      -'docs-out/**'
-      -'dist/**'
-      -'build/**'
+    paths:
+      - 'PyCTBN/**'
     branches: [ master ]
     tags-ignore:
       - 'v*'
