--- a/.github/workflows/python-PyCTBN-package.yml
+++ b/.github/workflows/python-PyCTBN-package.yml
@@ -45,18 +45,15 @@ jobs:
       run: |
         pip install pytest
         pip install pytest-cov
-        pytest --cov=./PyCTBN/tests/ --cov-report=xml
+        pytest PyCTBN/tests/ --cov='./' --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        files: ./coverage1.xml,./coverage2.xml
-        directory: ./coverage/reports/
+        files: ./coverage.xml
         flags: unittests
         env_vars: OS,PYTHON
         name: codecov-umbrella
         fail_ci_if_error: true
-        path_to_write_report: ./coverage/codecov_report.txt
         verbose: true
         
         
