--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,8 @@ jobs:
         rm -rf ../docs/*
         cp -r _build/html/* ../docs/
         cd ..
-        git config --local user.email "f.martini@campus.unimib.it"
-        git config --local user.name "philipMartini"
+        git config --local user.email "madlab@unimib.it"
+        git config --local user.name "madlabunimib"
         git add .
         git commit -m "Update documentation" -a || true
         # The above command will fail if no changes were present, so we ignore
@@ -48,7 +48,7 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         branch: master
-        github_token: ${{ secrets.PYCTBN_TOK }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
     # ===============================
         
         
